# SmileyDB3

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
SmileDB/: SmileDB.py
