[tool.poetry]
name = "SmileDB"
version = "0.3.0"
description = "A brief description of SmileDB"
authors = ["Your Name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
# Add other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
